@@ -1,6 +1,6 @@
 {
   "name": "simp-haveged",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "author": "SIMP Team",
   "summary": "Install and manage the HAVEGE daemon.",
   "license": "BSD-2-Clause",
@@ -43,7 +43,7 @@
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 4.13.1 < 5.0.0"
+      "version_requirement": ">= 4.13.1 < 6.0.0"
     }
   ],
   "requirements": [
