@@ -1,3 +1,6 @@
+* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.7-0
+- Update the upper bound of stdlib to < 6.0.0
+
 * Thu Nov 01 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.4.6-0
 - static asset updates for puppet 5
 
